Fixed timeline image sizing on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -524,8 +524,8 @@ section h3.section-subheading {
 .timeline > li .timeline-image {
   left: 0;
   margin-left: 0;
-  width: 4px;
-  height: 4px;
+  width: 80px;
+  height: 80px;
   position: absolute;
   z-index: 100;
   background-color: #cccccc;
